syntax = "proto3";

package welcome;
option go_package="welcomepb";

message Person {
    string first_name = 1;
    string last_name = 2;
}

message WelcomeEveryoneRequest {
    Person person = 1;
}

message WelcomeEveryoneResponse {
    string result = 1;
}

service WelcomeService {
    rpc WelcomeEveryone(stream WelcomeEveryoneRequest) returns (stream WelcomeEveryoneResponse) {};
}
